--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "csv-parse": "^6.1.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "face-api.js": "^0.20.0",
+    "install": "^0.13.0",
     "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
@@ -35,6 +37,7 @@
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "nodemon": "^3.1.10",
+    "npm": "^11.6.1",
     "xlsx": "^0.18.5"
   }
 }
