--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "csv-parse": "^6.1.0",
@@ -38,6 +39,7 @@
     "node-cron": "^4.2.1",
     "nodemon": "^3.1.10",
     "npm": "^11.6.1",
+    "razorpay": "^2.9.6",
     "xlsx": "^0.18.5"
   }
 }
